automat add profile pic

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -22,6 +22,7 @@
             <button class="btn btn-outline-info" type="submit">
                 Sign In
             </button>
+            <small class="ml-2"><a href="{% url 'password_reset' %}" class="text-info">forgot your password?</a></small>
         </div>
     </form>
     <div class="border-top pt-3">
