--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,66 +10,68 @@
 	<link rel="stylesheet" href="{% static 'css/custom.css' %}">
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="{% url 'blog-home' %}">Django Blog</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		  <span class="navbar-toggler-icon"></span>
-		</button>
-	  
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-		  <ul class="navbar-nav mr-auto">
-			<li class="nav-item active">
-			  <a class="nav-link" href="{% url 'blog-home' %}">Home <span class="sr-only">(current)</span></a>
-			</li>
-			<!-- <li class="nav-item">
-			  <a class="nav-link" href="#">About</a>
-			</li> -->
-			  {% if user.is_authenticated %}
-			  <li class="nav-item">
-				<a class="nav-link" href="{% url 'post-create' %}">New Post</a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link text-info" href="{% url 'profile' %}">{{ user }}</a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link" href="{% url 'logout' %}">Logout</a>
-			  </li>
-			  {% else %}
-			  <li class="nav-item">
-				<a class="nav-link" href="{% url 'login' %}">Sign In</a>
-			  </li>
-			  <li class="nav-item">
-				  <a class="nav-link" href="{% url 'register' %}">Register</a>
+	<div class="main">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<a class="navbar-brand" href="{% url 'blog-home' %}">Django Blog</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			  <span class="navbar-toggler-icon"></span>
+			</button>
+		  
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			  <ul class="navbar-nav mr-auto">
+				<li class="nav-item active">
+				  <a class="nav-link" href="{% url 'blog-home' %}">Home <span class="sr-only">(current)</span></a>
 				</li>
-			  {% endif %}
-		  </ul>
-		</div>
-	</nav>
-	<div class="main-container">
-		<div class="container p-3">
-			<div class="row">
-				<div class="col-12 col-lg-8 col-md-12 col-sm-12">
-					<div>
-						{% block content %}{% endblock %}
+				<!-- <li class="nav-item">
+				  <a class="nav-link" href="#">About</a>
+				</li> -->
+				  {% if user.is_authenticated %}
+				  <li class="nav-item">
+					<a class="nav-link" href="{% url 'post-create' %}">New Post</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link text-info" href="{% url 'profile' %}">{{ user }}</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" href="{% url 'logout' %}">Logout</a>
+				  </li>
+				  {% else %}
+				  <li class="nav-item">
+					<a class="nav-link" href="{% url 'login' %}">Sign In</a>
+				  </li>
+				  <li class="nav-item">
+					  <a class="nav-link" href="{% url 'register' %}">Register</a>
+					</li>
+				  {% endif %}
+			  </ul>
+			</div>
+		</nav>
+		<div class="main-container container-fluid">
+			<div class="p-3">
+				<div class="row">
+					<div class="col-12 col-md-8 col-sm-10 offset-sm-1 offset-md-0">
+						<div>
+							{% block content %}{% endblock %}
+						</div>
 					</div>
-				</div>
-				<div class="col col-lg-4">
-					<div class="sticky-top sticky-sidebar bg-light p-2 rounded">
-						<p class="text-muted ml-2">Find Me</p>
-						<ul class="list-group">
-							<li class="list-group-item"><a href="https://github.com/iamaliataie" target="_blank">Github</a></li>
-							<li class="list-group-item"><a href="https://linkedin.com/in/iamaliataie" target="_blank">LinkedIn</a></li>
-						</ul>
+					<div class="col-12 col-md-4 col-sm-10 offset-sm-1 offset-md-0">
+						<div class="sticky-top sticky-sidebar bg-light p-2 rounded">
+							<p class="text-muted ml-2">Find Me</p>
+							<ul class="list-group">
+								<li class="list-group-item"><a href="https://github.com/iamaliataie" target="_blank">Github</a></li>
+								<li class="list-group-item"><a href="https://linkedin.com/in/iamaliataie" target="_blank">LinkedIn</a></li>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+		<footer class="footer bg-light">
+			<div class="container">
+			  <span class="text-muted">Developed by Ali Ahmad Ataie</span>
+			</div>
+		</footer>
 	</div>
-	<footer class="footer bg-light">
-		<div class="container">
-		  <span class="text-muted">Developed by Ali Ahmad Ataie</span>
-		</div>
-	</footer>
     <script src="{% static 'jquery-3.6.0.js' %}"></script>
     <script src="{% static 'bootstrap.bundle.min.js' %}"></script>
 </body>
