--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -7,14 +7,22 @@ a{
 	text-decoration: none !important;
 }
 
-.main-container{
-	min-height: 80vh;
-}
+/* .main-container{
+	min-height: 100vh;
+} */
 
 .sticky-sidebar{
 	top: 10px;
 }
 
+.main{
+	position: relative;
+	width: 100%;
+	min-height: 100vh;
+}
+.main-container{
+	padding-bottom: 50px;
+}
 .custom-pagination{
 	display: flex;
 	justify-content: space-between;
@@ -25,4 +33,6 @@ a{
 	height: 60px;
 	width: 100%;
 	line-height: 60px;
+	position: absolute;
+	bottom: 0;
 }
