--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -5,6 +5,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{% block title %}{% endblock %}</title>
 	<link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
 	<link rel="stylesheet" href="{% static 'css/custom.css' %}">
@@ -49,12 +50,12 @@
 		<div class="main-container container-fluid">
 			<div class="p-3">
 				<div class="row">
-					<div class="col-12 col-md-8 col-sm-10 offset-sm-1 offset-md-0">
+					<div class="col-12 col-sm-10 col-md-8 offset-sm-1 offset-md-0">
 						<div>
 							{% block content %}{% endblock %}
 						</div>
 					</div>
-					<div class="col-12 col-md-4 col-sm-10 offset-sm-1 offset-md-0">
+					<div class="col-12 col-sm-10 col-md-4 offset-sm-1 offset-md-0">
 						<div class="sticky-top sticky-sidebar bg-light p-2 rounded">
 							<p class="text-muted ml-2">Find Me</p>
 							<ul class="list-group">
