base.html updated

--- a/blog/templates/blog/user_posts.html
+++ b/blog/templates/blog/user_posts.html
@@ -17,7 +17,7 @@
                 <small>{{ post.date_posted|date:"F d, Y" }}</small>
                 <hr>
                 <h2><a href="{% url 'post-detail' post.id %}">{{post.title}}</a></h2>
-                <p>{{post.content}}</p>
+                <p>{{post.content|truncatewords:15}}</p>
             </div>
         </div>
     </div>
