--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -47,7 +47,7 @@
 			  </ul>
 			</div>
 		</nav>
-		<div class="main-container container-fluid">
+		<div class="main-container">
 			<div class="p-3">
 				<div class="row">
 					<div class="col-12 col-sm-10 col-md-8 offset-sm-1 offset-md-0">
