--- a/blog/templates/blog/post_confirm_delete.html
+++ b/blog/templates/blog/post_confirm_delete.html
@@ -8,11 +8,11 @@
         {% csrf_token %}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Delete Post</legend>
-            <h2>Are you sure you want to delete post {{ object.title }}</h2>
+            <h4>Are you sure you want to delete post {{ object.title }}</h4>
         </fieldset>
         <div class="form-group">
             <button class="btn btn-outline-danger" type="submit">
-                Yes, Delete.
+                Yes, Delete
             </button>
             <a href="{% url 'post-detail' object.id %}" class="btn btn-outline-secondary">Cancel</a>
         </div>
