post detail tempalate updated linebreaksbr

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -17,7 +17,7 @@
                 {% endif %}
                 <hr>
                 <h4>{{ object.title }}</h4>
-                <p class="text-justify">{{ object.content }}</p>
+                <p class="text-justify">{{ object.content|linebreaksbr }}</p>
             </div>
         </div>
     </div>
