password change feature added

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -31,5 +31,6 @@
             <button class="btn btn-outline-info" type="submit">Update</button>
         </div>
     </form>
+    <small><a href="{% url 'password_change' %}" class="text-info">change password</a></small>
 </div>
 {% endblock %}
