--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,6 +1,7 @@
 {% extends 'blog/base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
+{% load socialaccount %}
 
 {% block title %} Sign in {% endblock %}
 {% block content %}
@@ -15,7 +16,10 @@
     <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Sign In</legend>
+            <legend class="border-bottom mb-4">Sign In
+                    <a href="{% provider_login_url 'google' %}" class="btn btn-danger">Login with Google</a>
+            </legend>
+            
             {{ form|crispy }}
         </fieldset>
         <div class="form-group">
@@ -29,6 +33,7 @@
         <small class="text-muted">
             Need an account? <a href="{% url 'register' %}" class="ml-2 text-info">Sign Up</a>
         </small>
+        
     </div>
 </div>
 {% endblock %}
