--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -17,7 +17,9 @@
         {% csrf_token %}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Sign In
+                    <a href="{% provider_login_url 'google' %}" class="btn btn-danger">Login with Google</a>
             </legend>
+            
             {{ form|crispy }}
         </fieldset>
         <div class="form-group">
