--- a/users/templates/users/password_reset_complete.html
+++ b/users/templates/users/password_reset_complete.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
+{% block title %} Password Reset Done{% endblock %}
 {% block content %}
 <div class="border rounded p-3 mb-3 bg-light">
     <div>
