--- a/users/templates/users/password_reset_confirm.html
+++ b/users/templates/users/password_reset_confirm.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
+{% block title %} New Password {% endblock %}
 {% block content %}
 <div class="border rounded p-3 mb-3 bg-light">
     <form method="POST">
