--- a/users/templates/users/password_reset_done.html
+++ b/users/templates/users/password_reset_done.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-{% block title %} Password Reset Done {% endblock %}
+{% block title %} Password Reset {% endblock %}
 {% block content %}
 <div class="border rounded p-3 mb-3 bg-light">
     <div class="alert alert-info">
