--- a/blog/templates/blog/post_confirm_delete.html
+++ b/blog/templates/blog/post_confirm_delete.html
@@ -1,20 +1,21 @@
 {% extends 'blog/base.html' %}
 {% load static %}
+{% load i18n %}
 
-{% block title %} Delete Post {% endblock %}
+{% block title %} {% translate 'Delete Post' %} {% endblock %}
 {% block content %}
 <div class="border rounded p-3 mb-3 bg-light">
     <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Delete Post</legend>
-            <h4>Are you sure you want to delete post {{ object.title }}</h4>
+            <legend class="border-bottom mb-4">{% translate 'Delete Post' %}</legend>
+            <h4>{% translate 'Are you sure you want to delete post' %} {{ object.title }}</h4>
         </fieldset>
         <div class="form-group">
             <button class="btn btn-outline-danger" type="submit">
-                Yes, Delete
+                {% translate 'Yes, Delete' %}
             </button>
-            <a href="{% url 'post-detail' object.id %}" class="btn btn-outline-secondary">Cancel</a>
+            <a href="{% url 'post-detail' object.id %}" class="btn btn-outline-secondary">{% translate 'Cancel' %}</a>
         </div>
     </form>
 </div>
