--- a/users/templates/users/password_change.html
+++ b/users/templates/users/password_change.html
@@ -1,18 +1,19 @@
 {% extends 'blog/base.html' %}
 {% load crispy_forms_tags %}
+{% load i18n %}
 
-{% block title %} Password Change {% endblock %}
+{% block title %} {% translate 'Password Change' %} {% endblock %}
 {% block content %}
 <div class="border rounded p-3 mb-3 bg-light">
     <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Password Change</legend>
+            <legend class="border-bottom mb-4">{% translate 'Password Change' %}</legend>
             {{ form|crispy }}
         </fieldset>
         <div class="form-group">
             <button class="btn btn-outline-info" type="submit">
-                Change Password
+                {% translate 'Password Change' %}
             </button>
         </div>
     </form>
