--- a/users/templates/users/password_change_done.html
+++ b/users/templates/users/password_change_done.html
@@ -1,12 +1,13 @@
 {% extends 'blog/base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
+{% load i18n %}
 
-{% block title %} Password Change Done {% endblock %}
+{% block title %} {% translate 'Password Change Done' %} {% endblock %}
 {% block content %}
 <div class="border rounded p-3 mb-3 bg-light">
     <div class="alert alert-info">
-        <h6>Your account password has been changed.</h2>
+        <h6>{% translate 'Your account password has been changed.' %}</h2>
     </div>
 </div>
 {% endblock %}
