--- a/users/templates/users/password_reset.html
+++ b/users/templates/users/password_reset.html
@@ -1,18 +1,19 @@
 {% extends 'blog/base.html' %}
 {% load crispy_forms_tags %}
+{% load i18n %}
 
-{% block title %} Password Reset {% endblock %}
+{% block title %} {% translate 'Password Reset' %} {% endblock %}
 {% block content %}
 <div class="border rounded p-3 mb-3 bg-light">
     <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Password Reset</legend>
+            <legend class="border-bottom mb-4">{% translate 'Password Reset' %}</legend>
             {{ form|crispy }}
         </fieldset>
         <div class="form-group">
             <button class="btn btn-outline-info" type="submit">
-                Request Password Reset
+                {% translate 'Request Password Reset' %}
             </button>
         </div>
     </form>
