--- a/users/templates/users/password_reset_complete.html
+++ b/users/templates/users/password_reset_complete.html
@@ -1,15 +1,16 @@
 {% extends 'blog/base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
+{% load i18n %}
 
-{% block title %} Password Reset Done{% endblock %}
+{% block title %} {% translate 'Password Reset Done ' %} {% endblock %}
 {% block content %}
 <div class="border rounded p-3 mb-3 bg-light">
     <div>
-        <h3>Your account password has been reset</h3>
+        <h5 class="alert alert-info">{% translate 'Your account password has been reset' %}</h5>
     </div>
     <div class="border-top pt-3">
-        <a href="{% url 'login' %}">Sign In Here</a>
+        <a href="{% url 'login' %}" class="text-info">{% translate 'Sign In Here' %}</a>
     </div>
 </div>
 {% endblock %}
