--- a/users/templates/users/password_reset_done.html
+++ b/users/templates/users/password_reset_done.html
@@ -1,12 +1,13 @@
 {% extends 'blog/base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
+{% load i18n %}
 
-{% block title %} Password Reset {% endblock %}
+{% block title %} {% translate 'ًPassword Reset Done' %} {% endblock %}
 {% block content %}
 <div class="border rounded p-3 mb-3 bg-light">
     <div class="alert alert-info">
-        <h6>An email has been sent with instructions to reset your password</h2>
+        <h6>{% translate 'An email has been sent with instructions to reset your password' %}</h2>
     </div>
 </div>
 {% endblock %}
