--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,7 +1,8 @@
 {% extends 'blog/base.html' %}
 {% load crispy_forms_tags %}
+{% load i18n %}
 
-{% block title %} Profile {% endblock %}
+{% block title %} {% translate 'Profile' %} {% endblock %}
 {% block content %}
 <div class="border p-3 rounded bg-light mb-4">
     {% if messages %}
@@ -23,14 +24,14 @@
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Profile Info</legend>
+            <legend class="border-bottom mb-4">{% translate 'Profile Info' %}</legend>
             {{ u_form|crispy }}
             <!-- {{ p_form|crispy }} -->
         </fieldset>
         <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Update</button>
+            <button class="btn btn-outline-info" type="submit">{% translate 'Update' %}</button>
         </div>
     </form>
-    <small><a href="{% url 'password_change' %}" class="text-info">change password</a></small>
+    <small><a href="{% url 'password_change' %}" class="text-info">{% translate 'change password' %}</a></small>
 </div>
 {% endblock %}
