--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -2,27 +2,28 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% load socialaccount %}
+{% load i18n %}
 
-{% block title %} Sign Up {% endblock %}
+{% block title %} {% translate 'Sign Up' %} {% endblock %}
 {% block content %}
 <div class="border rounded p-3 mb-3 bg-light">
     <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4 pb-3">Join Today
-                <a href="{% provider_login_url 'facebook'%}" class="btn btn-primary float-right">Sigup with Facebook</a>
+            <legend class="border-bottom mb-4 pb-3">{% translate 'Join Today' %}
+                <a href="{% provider_login_url 'facebook'%}" class="btn btn-primary float-right facebook-login">{% translate 'Sigup with Facebook' %}</a>
         </legend>
             {{ form|crispy }}
         </fieldset>
         <div class="form-group">
             <button class="btn btn-outline-info" type="submit">
-                Sign Up
+                {% translate 'Sign Up' %}
             </button>
         </div>
     </form>
     <div class="border-top pt-3">
         <small class="text-muted">
-            Already have an account? <a href="{% url 'login' %}" class="ml-2 text-info">Sign In</a>
+            {% translate 'Already have an account?' %} <a href="{% url 'login' %}" class="ml-2 text-info">{% translate 'Sign In' %}</a>
         </small>
     </div>
 </div>
