--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -80,9 +80,9 @@
 			  <span class="text-muted">{% translate 'Developed by Ali Ahmad Ataie' %}</span>
 			  <div class="languages d-inline ">
 				{% if LANGUAGE_CODE == 'fa' %}
-					<a href="/en/{{ request.path|slice:'4:' }}">انگلیسی</a>
+					<a href="/en/">انگلیسی</a>
 				{% else %}
-					<a href="/fa/{{ request.path|slice:'4:' }}">Persian</a>
+					<a href="/fa/">Persian</a>
 				{% endif %}
 			</div>
 			</div>
